tomcat/tomcat-jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-jenkins-ingress
spec:
  ingressClassName: traefik
spec:
  rules:
  - host: jenkins.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
